[package]
name = "test-server"
version = "0.1.0"
authors = ["hml1006 <hml1006@qq.com>"]
edition = "2018"
description = "It's a http/https test server, and can offer statistical metrics in termimal."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
clap = "2.33.0"
hyper = "0.13.1"
chrono = "0.4.10"
lazy_static = "1.4.0"
yaml-rust = "0.4.3"
shellexpand = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
thread-id = "3.3.0"
dashmap = "2.1.1"
itertools = "0.8.2"
console = "0.9.1"